Test génération du fichier reseau.csv, ajout de .gitignore pour exclure les .csv